# stoat

./: .gitignore  .stoatignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  TODO.md  config.stcfg  config.toml  flake.nix  keymap.json  keymap.ron  keymap.stcfg  keymap.toml  rustfmt.toml  stoatty.toml
agent/acp/: Cargo.toml
agent/claude_code/: Cargo.toml
codegraph/: Cargo.toml
codegraph/src/: build.rs  codec.rs  lib.rs
core/: Cargo.toml
core/src/: buffer_manager.rs  command.rs  config.rs  data.rs  error.rs  graph.rs  input.rs  lib.rs  log.rs  mode.rs  node.rs  nodes.rs  output.rs  plugin.rs  transform.rs  value.rs  view.rs  view_state.rs  workspace.rs
display_map/: Cargo.toml
display_map/src/: block_map.rs  buffer_stubs.rs  buffer_utils.rs  coords.rs  display_map.rs  fold_map.rs  inlay_map.rs  stoat_display_map.rs  tab_map.rs  traits.rs  wrap_map.rs
edit/: Cargo.toml
edit/src/: lib.rs
gui/: Cargo.toml  build.rs  clippy.toml
gui/src/: about_modal.rs  actions.rs  app.rs  app_host.rs  breadcrumbs.rs  buffer.rs  buffer_picker.rs  buffer_registry.rs  buffer_view.rs  canvas.rs  claude_chat.rs  claude_checkpoint_picker.rs  claude_permission_modal.rs  claude_tool_card.rs  command_info.rs  command_palette.rs  commit_list.rs  components.rs  conflict_item.rs  conflict_picker.rs  delete_tree_confirm.rs  diagnostics.rs  diagnostics_panel.rs  diagnostics_picker.rs  diff_coordinator.rs  diff_hunk_panel.rs  diff_map.rs  diff_pane.rs  display_map.rs  dock.rs  easing.rs  editor.rs  editor_input.rs  editor_view.rs  effect_runner.rs  element.rs  elevation.rs  encoding_picker.rs  executor.rs  file_finder.rs  (+73 more)
language/: Cargo.toml  build.rs
language/benches/: structural_diff.rs
language/src/: bracket.rs  brackets.rs  grammar.rs  highlight.rs  highlight_map.rs  indent.rs  language.rs  lib.rs  structural_diff.rs  surround.rs  symbols.rs  syntax_map.rs  textobject.rs
log/: Cargo.toml
log/src/: ident.rs  lib.rs  paths.rs  text_proto.rs
rope/: Cargo.toml
rope/src/: ast.rs  batch.rs  builder.rs  cursor.rs  edit.rs  iter.rs  kind.rs  kinds.rs  language.rs  lib.rs  query.rs  semantic.rs  token.rs  token_map.rs  word_parser.rs
rope_v3/: Cargo.toml
rope_v3/examples/: basic_usage.rs
rope_v3/src/: anchor.rs  dimensions.rs  kinds.rs  language.rs  lib.rs  semantic.rs  token.rs  token_map.rs  tree.rs
scheduler/: Cargo.toml
scheduler/src/: clock.rs  executor.rs  local_scheduler.rs  scheduler.rs  test_scheduler.rs  tests.rs  tokio_scheduler.rs
stoat/: Cargo.toml  build.rs  clippy.toml
stoat/src/: about_modal.rs  action_handlers.rs  action_metadata.rs  actions.rs  agent_ipc.rs  agent_session.rs  agent_status.rs  agent_term.rs  app.rs  app_state.rs  backend.rs  badge.rs  buffer.rs  buffer_item.rs  buffer_registry.rs  buffer_store.rs  build_info.rs  char_classifier.rs  claude.rs  claude_chat.rs  claude_checkpoint_picker.rs  cli.rs  code_index.rs  code_search.rs  command.rs  command_line.rs  command_palette.rs  command_palette_v2.rs  commit_list.rs  completion.rs  config.rs  conflict_session.rs  content_view.rs  cursor.rs  custom_keymap.rs  diagnostics.rs  diagnostics_picker.rs  diff.rs  diff_cache.rs  diff_map.rs  (+113 more)
stoat/tests/: basic_editing.rs  fixture_live.rs  input_handling.rs  keymap.rs  language_context.rs  local_fs.rs  local_fs_watcher.rs  local_git.rs  lsp.rs  lsp_rendering.rs  lsp_requests.rs  snapshots.rs  tab_handling.rs  text_operations.rs
stoat_gui/: Cargo.toml
stoat_gui/src/: about_modal.rs  actions.rs  app.rs  buffer_finder.rs  command_overlay.rs  command_palette.rs  commands.rs  content_view.rs  context.rs  cursor.rs  dispatch.rs  editor.rs  editor_element.rs  editor_style.rs  editor_view.rs  external_input.rs  file_finder.rs  git_status.rs  gutter.rs  help_modal.rs  input.rs  keybinding_hint.rs  keymap.rs  keymap_query.rs  lib.rs  minimap.rs  minimap_view.rs  modal.rs  pane_group.rs  render_stats.rs  static_view.rs  status_bar.rs  stoat_gui.rs  syntax.rs
stoat_gui_v4/: Cargo.toml
stoat_gui_v4/src/: app.rs  command_palette.rs  dispatch.rs  editor_element.rs  editor_style.rs  editor_view.rs  file_finder.rs  gutter.rs  keymap_query.rs  lib.rs  pane_group.rs  syntax.rs
stoat_lsp/: Cargo.toml
stoat_lsp/src/: buffer_helpers.rs  conversion.rs  diagnostic.rs  diagnostic_set.rs  manager.rs  stoat_lsp.rs  test.rs  transport.rs
stoat_lsp/tests/: anchor_tracking.rs  buffer_integration.rs  end_to_end.rs  protocol_tests.rs
stoat_v4/: Cargo.toml  keymap.toml
stoat_v4/src/: actions.rs  buffer_item.rs  file_finder.rs  git_diff.rs  git_repository.rs  keymap.rs  lib.rs  pane.rs  stoat.rs  stoat_actions.rs  test.rs  tests.rs  worktree.rs
text/: Cargo.toml
text/queries/: markdown_inline.scm
text/src/: action.rs  anchor.rs  buffer.rs  buffer_id.rs  convert.rs  cursor.rs  cursor_collection.rs  edit.rs  flat_buffer.rs  fragment.rs  highlight_query.rs  indent.rs  language.rs  lib.rs  locator.rs  movement.rs  node.rs  offset_utf16.rs  parse.rs  parser.rs  patch.rs  point.rs  query.rs  range.rs  rope.rs  search.rs  selection.rs  sum_tree.rs  syntax.rs  test_helpers.rs  tree_map.rs  undo_map.rs  view.rs
text_transform/: Cargo.toml
text_transform/src/: block_map.rs  buffer_utils.rs  char_visibility.rs  coords.rs  crease_map.rs  dimensions.rs  display_map.rs  fold_map.rs  inlay_map.rs  lib.rs  tab_map.rs  traits.rs  transform.rs  wrap_map.rs
text_v3/: Cargo.toml
text_v3/src/: convert.rs  language.rs  lib.rs  parser.rs
tty/: Cargo.toml  build.rs
tty/examples/: diagnostics.rs  doc_tooltip.rs  edit.rs  gutter.rs  hello.rs  panel.rs  panes.rs  pool_scroll.rs  scale.rs  scrollback.rs  sink.rs  smooth_scroll_history.rs  smooth_scroll_pages.rs  split_scroll.rs
tty/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  pty.rs  stoat_bin.rs
tty_render/: Cargo.toml
tty_render/src/: atlas.rs  gpu.rs  lib.rs  perf.rs  render.rs
tty_render/tests/: cursor_pool_render.rs  damaged_rows_render.rs  glyph_compositing_render.rs  gpu_timing_render.rs  headless_render.rs  hud_render.rs  occlusion_render.rs  panel_shadow_render.rs  pool_decoration_render.rs  (+4 more)
(+1420 files in other folders)
