[workspace]
resolver = "2"
members = [
  "action",
  "agent/claude_code",
  "bin",
  "config",
  "language",
  "scheduler",
  "stoat",
  "log",
  "text",
  "viewport",
]

[workspace.package]
edition = "2021"
publish = false

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
snafu = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = [
  "parking_lot",
  "env-filter",
] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = { version = "0.3", default-features = false }
compact_str = "0.8"
arrayvec = "0.7"
smallvec = { version = "1", features = ["const_generics"] }
unicode-width = "0.2"
slotmap = "1"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
async-task = "4"
parking_lot = "0.12"
tree-sitter = "0.26"
cc = "1"
lsp-types = "0.97"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
