[workspace]
resolver = "2"
members = [
  "action",
  "agent/acp",
  "agent/claude_code",
  "bin",
  "config",
  "gui",
  "host",
  "language",
  "scheduler",
  "stoat",
  "log",
  "text",
]
# `agent/acp` (ACP, Zed "Way 1") is excluded from the default build: the
# near-term Claude Code path is the embedded terminal, not ACP. It stays a
# workspace member so the code remains in-tree and buildable on demand
# (`cargo build -p stoat_agent_acp`, or any `--workspace` invocation).
default-members = [
  "action",
  "agent/claude_code",
  "bin",
  "config",
  "gui",
  "host",
  "language",
  "scheduler",
  "stoat",
  "log",
  "text",
]

[workspace.package]
edition = "2021"
publish = false

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
snafu = "0.9"
tracing = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = [
  "parking_lot",
  "env-filter",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
etcetera = "0.11"
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = { version = "0.3", default-features = false }
compact_str = "0.8"
arrayvec = "0.7"
smallvec = { version = "1", features = ["const_generics"] }
unicode-width = "0.2"
slotmap = { version = "1", features = ["serde"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
async-task = "4"
parking_lot = "0.12"
tree-sitter = "0.26"
cc = "1"
lsp-types = "0.97"
async-trait = "0.1"
portable-pty = "0.8"
libc = "0.2"
vte = "0.13"
alacritty_terminal = "0.26"
ignore = "0.4"
notify = "8"
nucleo = "0.5"
tempfile = "3"
ron = "0.8"
toml = "0.8"
time = { version = "0.3", features = [
  "formatting",
  "parsing",
  "macros",
  "serde",
] }
blake3 = "1"
arboard = "3"
base64 = "0.22"
regex = "1"
brush-parser = "0.4"
gpui = "0.2.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
