[workspace]
resolver = "3"
members = [
  "action",
  "bin",
  "cli",
  "codegraph",
  "config",
  "host",
  "language",
  "scheduler",
  "stoat",
  "log",
  "text",
  "viewport",
  "tty_protocol",
  "tty_widgets",
  "tty_term",
  "tty_render",
  "tty",
]

[workspace.package]
edition = "2024"
publish = false

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
snafu = "0.9"
tracing = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tracing-subscriber = { version = "0.3", features = [
  "parking_lot",
  "env-filter",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
etcetera = "0.11"
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = { version = "0.3", default-features = false }
compact_str = "0.9"
arrayvec = "0.7"
smallvec = { version = "1", features = ["const_generics"] }
unicode-width = "0.2"
slotmap = { version = "1", features = ["serde"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
async-task = "4"
parking_lot = "0.12"
tree-sitter = "0.26"
cc = "1"
lsp-types = "0.97"
async-trait = "0.1"
portable-pty = "0.9"
libc = "0.2"
memchr = "2"
vte = "0.15"
alacritty_terminal = "0.26"
ignore = "0.4"
notify = "8"
nucleo = "0.5"
tempfile = "3"
ron = "0.12"
time = { version = "0.3", features = [
  "formatting",
  "parsing",
  "macros",
  "serde",
] }
blake3 = "1"
postcard = { version = "1", features = ["alloc"] }
arboard = "3"
base64 = "0.22"
regex = "1"
brush-parser = "0.4"
wgpu = "29"
bytemuck = { version = "1.25", features = ["derive"] }
raw-window-handle = "0.6"
winit = "0.30"
cosmic-text = "0.18"
swash = "0.2.7"
etagere = "0.3"
lru = { version = "0.16", default-features = false }
rustc-hash = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
