[package]
name = "stoat_core"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[features]
default = []
test-utils = ["dep:tempfile"]

[lib]
name = "stoat_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
stoat_text = { path = "../text" }
stoat_rope = { path = "../rope" }
snafu.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ron = "0.8"
rkyv = { version = "0.8.10", features = [
  "indexmap-2",
], default-features = false }
compact_str = { version = "0.9", features = ["rkyv", "serde"] }
ordered-float = { git = "https://github.com/leeola/rust-ordered-float", rev = "3c03870f8c27fa6c2148fa9fdb5bfd8146a48dc4", features = [
  "rkyv",
  "serde",
] }
indexmap = { version = "2.7", features = ["serde"] }
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dirs = "5.0"
tempfile = { version = "3.8", optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["rt"] }
