[package]
name = "stoat_display_map"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
path = "src/stoat_display_map.rs"
doctest = false

[dependencies]
# FIXME: text.workspace = true (temporarily disabled due to upstream smallvec issue)
# Using local stubs until https://github.com/zed-industries/zed text crate is fixed
sum_tree.workspace = true

[dev-dependencies]
# FIXME: gpui = { workspace = true, features = ["test-support"] } (depends on text)
