[package]
name = "stoat_gui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/stoat_gui.rs"

[features]
test-support = [
  "gpui/test-support",
  "dep:insta",
  "stoat/test-support",
  "dep:stoat_host",
]

[dependencies]
gpui.workspace = true
insta = { version = "1", features = ["json"], optional = true }
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu = { workspace = true }
stoat = { path = "../stoat" }
stoat_action = { path = "../action" }
stoat_config = { path = "../config" }
stoat_host = { path = "../host", optional = true }
stoat_language = { path = "../language" }
stoat_scheduler = { path = "../scheduler" }
tracing.workspace = true
