[package]
name = "stoat_language"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
stoat_scheduler = { path = "../scheduler" }
stoat_text = { path = "../text" }
imara-diff = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tree-sitter = "0.26"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "structural_diff"
harness = false
