[package]
name = "stoat_rope"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
# Core dependencies
compact_str = { workspace = true }
rustc-hash = { workspace = true }
# Match Zed's smallvec version
smallvec = { workspace = true }

# Zed crates from git
sum_tree = { workspace = true }
text = { workspace = true }
clock = { workspace = true }

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
