[package]
name = "stoat_rope_v3"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
# Core dependencies
compact_str = { workspace = true }
rustc-hash = { workspace = true }
# Match Zed's smallvec version
smallvec = { workspace = true }

# Zed crates from git
sum_tree = { git = "https://github.com/zed-industries/zed.git" }
text = { git = "https://github.com/zed-industries/zed.git" }
clock = { git = "https://github.com/zed-industries/zed.git" }

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
