[package]
name = "stoat_scheduler"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/scheduler.rs"
doctest = false

[dependencies]
async-task = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
parking_lot = { workspace = true }
