[package]
name = "stoat"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
test-support = []
# In-process builtin language server for the stcfg config language. Off by
# default; the editor binary enables it. Other consumers (and `cargo test -p
# stoat`) are unaffected.
builtin-lsp = []

[dependencies]
stoat_action = { path = "../action" }
stoat_config = { path = "../config" }
stoat_host = { path = "../host" }
stoat_language = { path = "../language" }
stoat_log = { path = "../log" }
stoat_scheduler = { path = "../scheduler" }
stoat_text = { path = "../text" }
crossterm.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process", "time"] }
futures.workspace = true
tracing.workspace = true
compact_str.workspace = true
etcetera.workspace = true
git2 = { version = "0.20", default-features = false }
encoding_rs = "0.8"
unicode-width.workspace = true
slotmap.workspace = true
lsp-types.workspace = true
async-trait.workspace = true
snafu = { workspace = true }
portable-pty.workspace = true
libc.workspace = true
vte.workspace = true
alacritty_terminal.workspace = true
ignore.workspace = true
nucleo.workspace = true
tempfile.workspace = true
ron.workspace = true
toml.workspace = true
time.workspace = true
blake3.workspace = true
arboard.workspace = true
base64.workspace = true
regex.workspace = true
brush-parser.workspace = true
