[package]
name = "stoat"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Compile in main-thread latency instrumentation. Off by default so release
# builds carry no timing rings or per-frame measurement.
perf = []
# Compile in the deterministic git/rust fixture materializer. Off by default
# so production builds carry no test-scaffolding code.
fixture = []

[dependencies]
codegraph = { path = "../codegraph" }
stoat_action = { path = "../action" }
stoat_config = { path = "../config" }
stoat_host = { path = "../host" }
stoat_language = { path = "../language" }
stoat_log = { path = "../log" }
stoat_scheduler = { path = "../scheduler" }
stoat_text = { path = "../text" }
stoatty_protocol = { path = "../tty_protocol" }
vscode_theme = { path = "../vscode_theme" }
stoatty_widgets = { path = "../tty_widgets" }
ast-grep-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "net", "time"] }
futures.workspace = true
tracing.workspace = true
compact_str.workspace = true
etcetera.workspace = true
git2 = { version = "0.21", default-features = false }
pulldown-cmark.workspace = true
unicode-width.workspace = true
slotmap.workspace = true
lsp-types.workspace = true
async-trait.workspace = true
snafu = { workspace = true }
portable-pty.workspace = true
libc.workspace = true
vte.workspace = true
alacritty_terminal.workspace = true
globset.workspace = true
ignore.workspace = true
nucleo.workspace = true
tempfile.workspace = true
ron.workspace = true
time.workspace = true
blake3.workspace = true
arboard.workspace = true
base64.workspace = true
regex.workspace = true
brush-parser.workspace = true

[dev-dependencies]
insta = "1"

# Live integration tests that drive a real headless Stoat against a
# materialized fixture. Gated on the `fixture` feature so a plain `cargo test`
# never builds or runs them. Opt in with `--features fixture`.
[[test]]
name = "fixture_live"
path = "tests/fixture_live.rs"
required-features = ["fixture"]
