[package]
name = "stoat_gui"
version = "0.1.0"
edition = "2021"
description = "GUI for the Stoat text editor using GPUI"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
stoat = { path = "../stoat" }
stoat_rope_v3 = { path = "../rope_v3" }
stoat_text_v3 = { path = "../text_v3" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
text = { git = "https://github.com/zed-industries/zed.git" }
sum_tree = { git = "https://github.com/zed-industries/zed.git" }
clock = { git = "https://github.com/zed-industries/zed.git" }
anyhow = "1.0"
smallvec = "1.13"
parking_lot = { workspace = true }
tracing = "0.1"
rustc-hash = "2.0"
