[package]
name = "stoat_gui"
version = "0.1.0"
edition = "2021"
description = "GUI for Stoat editor using GPUI"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
stoat = { path = "../stoat" }
stoat_text = { path = "../text" }
stoat_rope = { path = "../rope" }
gpui = { workspace = true }
text = { workspace = true }
clock = { workspace = true }
sum_tree = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
rustc-hash = "2.0"
smallvec = { workspace = true }
parking_lot = { workspace = true }
