[package]
name = "stoat_gui_v4"
version = "0.1.0"
edition = "2021"
description = "Minimal GUI for Stoat v4 using GPUI Entity pattern"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[lints]
workspace = true

[dependencies]
stoat_v4 = { path = "../stoat_v4" }
stoat_text = { path = "../text" }
stoat_rope = { path = "../rope" }
gpui = { workspace = true }
text = { workspace = true }
sum_tree = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
rustc-hash = "2.0"
smallvec = { workspace = true }
parking_lot = { workspace = true }
