[package]
name = "stoat_lsp"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/stoat_lsp.rs"

[features]
test-support = []

[dependencies]
lsp-types = "0.97"
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
async-channel = "2.3"
futures = "0.3"
smol = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
text = { workspace = true }
# Force const_new feature for smallvec (required by Zed text crate)
smallvec = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
stoat_lsp = { path = ".", features = ["test-support"] }
