[package]
name = "stoat_text"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
stoat_rope = { path = "../rope" }
text-size = "1.1"
tree-sitter = "0.20"
tree-sitter-md = "0.1"
snafu = { version = "0.7", features = ["std"] }

[lints]
workspace = true
