[package]
name = "stoat_text"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
# Tree-sitter core
tree-sitter = "0.20"

# Language grammars
tree-sitter-rust = "0.20"
tree-sitter-md = "0.1"
tree-sitter-json = "0.20"
tree-sitter-toml = "0.20"

# Zed's text infrastructure (for BufferSnapshot, Anchor)
text = { workspace = true }

# Required for feature unification: Zed's `text` crate uses smallvec's
# `const_new` feature but doesn't declare it in its own Cargo.toml
smallvec = { workspace = true }

# Error handling
anyhow = "1.0"

[lints]
workspace = true
