[package]
name = "stoat_text_transform"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
sum_tree.workspace = true
text.workspace = true
gpui.workspace = true
collections.workspace = true
smol.workspace = true
tracing.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
stoat_log = { path = "../log" }
