[package]
name = "stoatty"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
stoatty_protocol = { path = "../tty_protocol" }
stoatty_term = { path = "../tty_term" }
stoatty_render = { path = "../tty_render" }
winit.workspace = true
portable-pty.workspace = true
serde.workspace = true
toml.workspace = true
etcetera.workspace = true
snafu.workspace = true
