[package]
name = "stoatty"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "stoatty"
path = "src/main.rs"

[features]
# Forward the renderer's per-frame timing and perf HUD. Off by default.
perf = ["stoatty_render/perf"]

[dependencies]
stoatty_protocol = { path = "../tty_protocol" }
stoatty_term = { path = "../tty_term" }
stoatty_render = { path = "../tty_render" }
stoat_cli = { path = "../cli" }
stoat_log = { path = "../log" }
vscode_theme = { path = "../vscode_theme" }
tracing.workspace = true
alacritty_terminal.workspace = true
arboard.workspace = true
clap.workspace = true
clap_complete.workspace = true
winit.workspace = true
portable-pty.workspace = true
libc.workspace = true
rustc-hash.workspace = true
serde.workspace = true
toml.workspace = true
etcetera.workspace = true
snafu.workspace = true
