[package]
name = "stoatty_render"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
stoatty_term = { path = "../tty_term" }
wgpu.workspace = true
bytemuck.workspace = true
raw-window-handle.workspace = true
futures = { workspace = true, features = ["executor"] }
