[package]
name = "stoatty_render"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# Compile in per-frame CPU/GPU timing and the perf HUD. Off by default so
# release builds carry no timing state or GPU timestamp features.
perf = []

[dependencies]
stoatty_term = { path = "../tty_term" }
stoatty_protocol = { path = "../tty_protocol" }
wgpu.workspace = true
tracing.workspace = true
bytemuck.workspace = true
raw-window-handle.workspace = true
futures = { workspace = true, features = ["executor"] }
cosmic-text.workspace = true
swash.workspace = true
etagere.workspace = true
lru.workspace = true
rustc-hash.workspace = true
