[package]
name = "stoat_agent_acp"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu.workspace = true
stoat = { path = "../../stoat" }
stoat_agent_claude_code = { path = "../claude_code" }
stoat_scheduler = { path = "../../scheduler" }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
