[package]
name = "stoat_agent_claude_code"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
async-channel = "2"
async-broadcast = "0.7"
async-io = "2"
futures-lite = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[features]
e2e_claude_code = []

[dev-dependencies]
smol = "2"

[lints]
workspace = true
