[package]
name = "stoat_agent_claude_code"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
anyhow = "1"
async-trait.workspace = true
futures = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = "0.8"
stoat = { path = "../../stoat" }
stoat_log = { path = "../../log" }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[features]
e2e_claude_code = []

[lints]
workspace = true
